spring security个性化定制，自定义页面，自定义成功，失败处理

--- a/yxdtyut-security-demo/src/main/resources/application.yml
+++ b/yxdtyut-security-demo/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     password: root
   session:
     store-type: none
-security:
-  basic:
-    enabled: false
+yxdtyut:
+  security:
+    browser:
+      loginUrl: /demo-signIn.html
+      loginType: REDIRECT
+#security:
+#  basic:
+#    enabled: false
