--- a/yxdtyut-security-browser/pom.xml
+++ b/yxdtyut-security-browser/pom.xml
@@ -26,5 +26,10 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.3.1-1</version>
+        </dependency>
     </dependencies>
 </project>
